fix(components): fix TOC scrollbar

--- a/packages/components/src/client/styles/toc.scss
+++ b/packages/components/src/client/styles/toc.scss
@@ -23,7 +23,7 @@ $headings: (2, 3, 4, 5, 6);
 
   display: none;
 
-  overflow-y: scroll;
+  overflow-y: auto;
 
   min-width: 10rem;
   max-width: 15rem;
